/*
 * $Id: ChangeLog,v 1.2206 2004/02/02 19:32:23 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-02 16:44 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * bin/bld.bat
    * Include hbzip.lib in MSVC libs list only if exists.

  * include/hbinit.h
    ! Fixed MSVC HB_INIT_SYMBOLS_END macro to return 0 (MSVC 7 compatability).

  * source/rtl/win32ole.prg
    * Minor optimization

2004-02-02 11:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapigt.h
    + Added missing HB_EXPORT to hb_gt_hasChanged()

2004-02-02 16:49 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * /contrib/winprn/Makefile
     * added make gnu Makefile
  * /contrib/winprn/makefile.b32
     * renamed old makefile into makefile.b32

2004-02-02 15:36 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
   * source/rtl/gtalleg/gtalleg.c
     * fix a typo iParm should be iParam

2004-02-02 17:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * tests/videotst.prg
    ! fix typo : SET GTMODE INLINE => SET GTMODE TO INLINE

  * tests/xhbwav.prg
  * tests/xhbmidi.prg
    ! fixes on return values and some simplification

  + tests/sample.wav
  + tests/xhbwav.prg
    ! Sample program to play wav file with gtalleg

  + tests/sample.pcx
  + tests/xhbpic.prg
    ! Sample program to view graphic files with gtalleg while playing sound

  + tests/xhbenc.prg
    + test program for file encoding

  + contrib/unicode/hbencode.c
    + added the following file encoding functions:
      + UUENCODE_FILE()
      + UUENCODE_FILE_BY_CHUNK()
      + B64ENCODE_FILE()
      + B64ENCODE_FILE_BY_CHUNK()
      + YYENCODE_FILE()
      + YYENCODE_FILE_BY_CHUNK()

  * contrib/unicode/make_b32.bat
  * contrib/unicode/makefile.bc
  * contrib/unicode/makefile.vc
    + add hbencode.obj file dependency

  * contrib/unicode/hbc7.c
  * contrib/unicode/hbcc.prg