@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2206 2004/02/02 19:32:23 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2207 2004/02/03 00:43:08 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -116,6 +116,10 @@
 
    * source/vm/thread.c
      * Minor formatting.
+
+2004-02-01 17:50 UTC-0300 Mauricio Abre <maurifull@datafull.com>
+  * source/rtl/gtalleg/gtalleg.c
+    ! Screen Width/Height/Depth query prior to gt initialization now return correct values
 
 2004-02-02 01:55 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
   * contrib/libct/files.c
